k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  type: ClusterIP
  selector:
    app: python-ingress
  ports:
    - port: 80
      targetPort: 5000
